<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfade"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >
       
    	<!-- Text for the Student Registration Layout -->
       	<TextView
        android:id="@+id/txtStudentRegWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginBottom="20dp"
        android:text="@string/studentreg_msg"
        android:textSize="25sp"
        android:textStyle="bold" />
       	

       	
       	<!-- Text Field for Student Password -->

       	<EditText
       	    android:id="@+id/studentNumber"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_marginBottom="5dp"
       	    android:ems="10"
       	    android:hint="@string/enter_student_number"
       	    android:inputType="numberSigned" >

       	    <requestFocus />
       	</EditText>

		<EditText
	       	android:id="@+id/studentPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPassword"
	        android:hint="@string/enter_password"
	        android:ems="10"
       	    
       	    >
       	</EditText>
       	
       	
       	<!-- Text Field for Student First Name -->
       	<EditText
	       	android:id="@+id/studentFirstName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_first_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>

       	<!-- Text Field for Students Last Name  -->
       	<EditText 
	       	android:id="@+id/studentLastName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_last_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>
       	
       	
       	<!-- Text Field for Student Middle Name/Initial -->
       	<EditText 
	       	android:id="@+id/studentMiddleName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_middle_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>
       	
       	
       	<!-- Text Field for Student Number -->
       	
    <!-- Spinner for Student Colleges -->
    <Spinner
        android:id="@+id/spinColleges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:entries="@array/colleges"
        android:prompt ="@string/choose_college" />
    
    
    <!-- Spinner for Student Year Level -->
    <Spinner 
        android:id="@+id/yearLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:entries="@array/year_level"
        android:prompt="@string/choose_year"
        
        />   	
        
    <!-- Button Continue for Student Registration -->
    <Button 
        android:id="@+id/btnStudentContinue"
            android:layout_width="88dp"
            android:layout_height="81dp"
		    android:layout_gravity="center_vertical|center_horizontal"
			android:background="@drawable/go"
        />
        
    
       	
    </LinearLayout>
    

</ScrollView>