<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfade"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >
        
       <!-- Text for the User Registration Layout -->
       	<TextView
        android:id="@+id/txtUserRegWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginBottom="20dp"
        android:text="@string/userreg_msg"
        android:textSize="25sp"
        android:textStyle="bold" />
       	
       	<!-- Text Field for User's Username -->
       	
       	<!-- Text Field for User's Password -->

       	<EditText
       	    android:id="@+id/userIdNumber"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_marginBottom="5dp"
       	    android:ems="10"
       	    android:hint="@string/enter_user_id_number"
       	    android:inputType="numberSigned" >

       	    <requestFocus />
       	</EditText>

		<EditText
	       	android:id="@+id/userPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPassword"
	        android:hint="@string/enter_password"
	        android:ems="10"
       	    
       	    >
       	</EditText>
       	
		
		<Spinner
            android:id="@+id/salutation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:entries="@array/salutationopt"
            android:prompt="@string/salutation" />
		
		
		<!-- Text Field for User's First Name -->
       	<EditText
	       	android:id="@+id/userFirstName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_first_name"
	        android:ems="10"
       	    
       	    >
       	</EditText>
       	
       	
        <!-- Text Field for User's Last Name  -->
       	<EditText 
	       	android:id="@+id/userLastName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_last_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>
       	
       	
       	<!-- Text Field for User's Middle Name/Initial -->
       	<EditText 
	       	android:id="@+id/userMiddleName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_middle_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>
       	
       	
       	 <Spinner
            android:id="@+id/spinnerposition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="5dp"
            android:entries="@array/position"
            android:prompt="@string/chooseposition" />
       	
       	
       	
       	
       	<!-- Text Field for User's ID Number -->
       	
       	
       	<Button
		    android:id="@+id/btnContinueUser"
            android:layout_width="88dp"
            android:layout_height="81dp"
		    android:layout_gravity="center_vertical|center_horizontal"
			android:background="@drawable/go"
		    >
		    
		</Button>	
        
        
    </LinearLayout>
    
</ScrollView>