<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfade"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >
    
    
    <!-- Text for the Creating Message in User's Layout -->

       	<TextView
       	    android:id="@+id/txtUserCreateMsg"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_marginBottom="20dp"
       	    android:text="@string/app_name"
       	    android:textColor="#ffffff"
       	    android:layout_gravity="center_vertical|center_horizontal"
       	    android:textSize="25sp"
       	    android:textStyle="bold" />
       	


       	
       	
       	
       	<!-- This is the Id Number of the User -->
       	
       	<EditText
	       	android:id="@+id/posttitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="text"
			android:hint="@string/posttitle"
	        android:ems="10"
       	    
       	    >
       	    <requestFocus />
       	</EditText>
       	
       	<!-- Spinner  in Choosing Post Type -->
       	<Spinner
	        android:id="@+id/spinposttype"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:entries="@array/posttype"
	        android:prompt ="@string/chooseposttype" />

       	<EditText
       	    android:id="@+id/txtmessage"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:ems="10"
       	    android:inputType="textMultiLine"
       	    android:hint="@string/entermsg" >


       	</EditText>
       	
       	
       	<Spinner
	        android:id="@+id/spinnerviewer"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:entries="@array/viewer"
	        android:prompt ="@string/chooseviewer" />
       	
       	
       	
       	<!-- Button Post for User Create Message -->

    <Button
        android:id="@+id/btnPostMsg"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login"
        android:text="@string/msgpost"
        android:textColor="#ffffff"
        android:textStyle="bold" />

 </LinearLayout>
    

</ScrollView>