<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfade"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >
       
    	<!-- Text for the Registration Layout -->
       	<TextView
        android:id="@+id/txtFacultyRegWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/facultyreg_msg"
        android:textSize="25sp"
        android:textStyle="bold" />
       	

       	
       	
       	
       	<!-- Text Field for Faculty Username -->
       	
       	<!-- Text Field for Faculty Password -->

       	<EditText
       	    android:id="@+id/facultyIdNumber"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_marginBottom="5dp"
       	    android:ems="10"
       	    android:hint="@string/enter_faculty_id_number"
       	    android:inputType="numberSigned" >

       	    <requestFocus />
       	</EditText>

		<EditText
	       	android:id="@+id/FacultyPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPassword"
	        android:hint="@string/enter_password"
	        android:ems="10"
       	    
       	    >
       	</EditText>
       	
       	
       	<!-- Text Field for Faculty First Name -->
       	<EditText
	       	android:id="@+id/facultyFirstName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_first_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>

       	<!-- Text Field for Faculty Last Name  -->
       	<EditText 
	       	android:id="@+id/facultyLastName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_last_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>
       	
       	
       	<!-- Text Field for Faculty Middle Name/Initial -->
       	<EditText 
	       	android:id="@+id/facultyMiddleName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPersonName"
	        android:hint="@string/enter_middle_name"
	        android:ems="10"
       	    
       	    >
       	
       	</EditText>
       	
       	
       	<!-- Text Field for Faculty ID Number -->
       	
       	
    <!-- Spinner for Faculty Colleges -->
    <Spinner
        android:id="@+id/spinCollegesFaculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:entries="@array/colleges"
        android:prompt ="@string/choose_college" />   
        
    		
		<Button
		    android:id="@+id/btnContinueFaculty"
            android:layout_width="88dp"
            android:layout_height="81dp"
		    android:layout_gravity="center_vertical|center_horizontal"
			android:background="@drawable/go"
		    >
		    
		</Button>	
       	
       	
       	
    </LinearLayout>
    

</ScrollView>