<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfade"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >
    
       <!-- Username Text -->
    
        <TextView
        android:id="@+id/txtlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
         android:layout_gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />
    
    
 

    <!-- Input field for ID Number -->

        <EditText
            android:id="@+id/idnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/idnumber"
            android:ems="10"
            android:inputType="numberSigned" />
    

        
        
    <!-- Input field for Password -->

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:ems="10" >

    </EditText>
    
     
     <!-- Button for Login(Validation/Verification) -->

     <Button
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="25dip"
         android:background="@drawable/login"
         android:text="@string/login_text"
         android:textColor="#ffffff" />

</LinearLayout>
</ScrollView>